--- a/src/components/topbar.css
+++ b/src/components/topbar.css
@@ -3,17 +3,19 @@
     animation: none !important;
 }
 
-.headerwrapper {
+.header-wrapper {
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: center;
+    position: absolute;
 }
   
 .header {
     display: flex;
     justify-content: center;
     padding: 0.5rem;
+    width: 98%;
     /* margin: 20px; */
     /* width: 98%; */
     /* z-index: 20; */
