--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,8 @@ code {
   overflow-y: auto; /* or any other value */
   background: transparent;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+ }
