--- a/src/pages/landing.css
+++ b/src/pages/landing.css
@@ -5,11 +5,12 @@
     align-items: center;
     flex-direction: row;
     position: relative;
+    /* position: absolute; */
 }
 
 .videoContainer{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100vh; 
     top: 0;
     overflow: hidden;
     justify-content: center;
